inital commit for recipe page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+     <title>Drink menu 2022</title>
+</head>
+<body>
+    <h1>Drinks for summer 2022</h1>
+    <p>This is a collection of drink recipes</p>
+   <p> <em>designed only to test website building</em> </p>
+   <p> <strong>Dont assume they're correct</strong> </p>
+    <h6>Lets see if I've learned HTML basics</h6>
+    <!--theres a very good chance this will break-->
+<a href="Sidecar">Our Sidecar</a> 
+<a href="Manhattan"Our Manhattan </a>
+    <a href="Old_Fashioned"Our Old Fashioned </a>
+        <p> I Hope this works, and I hope you learn something</p>   
+</body>
+</html>
