initial commit of sidecar page, and fixed links on index

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <h6>Lets see if I've learned HTML basics</h6>
     <!--theres a very good chance this will break-->
 <a href="Sidecar">Our Sidecar</a> 
-<a href="Manhattan"Our Manhattan </a>
-    <a href="Old_Fashioned"Our Old Fashioned </a>
+<p><a href="Manhattan">Our Manhattan </a></p>
+   <p> <a href="Old_Fashioned">Our Old Fashioned </a> </p>
         <p> I Hope this works, and I hope you learn something</p>   
 </body>
 </html>
