--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
    <p> <strong>Dont assume they're correct</strong> </p>
     <h6>Lets see if I've learned HTML basics</h6>
     <!--theres a very good chance this will break-->
-<a href="Sidecar">Our Sidecar</a> 
-<p><a href="Manhattan">Our Manhattan </a></p>
-   <p> <a href="Old_Fashioned">Our Old Fashioned </a> </p>
+<a href="Sidecar.html">Our Sidecar</a> 
+<p><a href="Manhattan.html">Our Manhattan </a></p>
+   <p> <a href="Old_Fashioned.html">Our Old Fashioned </a> </p>
         <p> I Hope this works, and I hope you learn something</p>   
 </body>
 </html>
